@@ -1,4 +1,4 @@
-FROM openjdk:24-slim-bookworm AS builder
+FROM openjdk:21-slim-bookworm AS builder
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
@@ -6,8 +6,8 @@ RUN apt-get update && apt-get install -y maven && \
     mvn clean package -DskipTests -q && \
     mv target/*.jar app.jar
 
-FROM openjdk:24-slim-bookworm
+FROM openjdk:21-slim-bookworm
 WORKDIR /app
 COPY --from=builder /app/app.jar .
 EXPOSE 8080
-ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
